# static-analysis

./: .gitignore  README.md  command list.txt  static analysis.pptx
.circleci/: config.yml
monorepos/: sonar-project.properties
monorepos/.circleci/: config.yml
monorepos/.scannerwork/: report-task.txt
monorepos/config/: .circleciconfig.yml
monorepos/services/demo1/: sonar-project.properties
monorepos/services/demo1/config/: .circleciconfig.yml
monorepos/services/demo3/: pyproject.toml
services/demo1/: pyproject.toml  sonar-project.properties
services/demo1/.circleci/: config.yml
services/demo2/: pyproject.toml  sonar-project.properties
services/demo2/.circleci/: config.yml
services/demo2/demo2/: main.py
services/demo3/: sonar-project.properties
services/demo3/.circleci/: config.yml
services/demo4/: sonar-project.properties
services/demo4/.circleci/: config.yml
services/demo5/: settings.gradle.kts  sonar-project.properties
services/demo5/.circleci/: config.yml
services/demo5/src/test/java/org/example/: GreetingTest.java
services/demo6/: build.gradle.kts  settings.gradle.kts
services/demo6/.circleci/: config.yml
services/demo6/src/main/java/org/example/: Greeting.java
services/demo6/src/test/java/org/example/: MainTest.java
