[tool.poetry]
name = "demo2"
version = "0.1.0"
description = ""
authors = ["criscapunal <crcaguilerapo@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
